<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="cloyster.final_project_cloyster.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="New Recording"
        android:id="@+id/textView"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="85dp">
        <TextView
            android:layout_marginRight="40dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/switch_am_fm"
            android:text="AM"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:showText="false"
            android:id="@+id/switch_am_fm"
            android:scaleX="2"
            android:scaleY="2"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="FM"
            android:layout_toRightOf="@+id/switch_am_fm"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_carrier_frequency"
            android:id="@+id/textView_carrier_frequency"
            android:layout_weight="0.25"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CarrierFrequency"
            android:text="0.0"
            android:layout_weight="0.25"/>
    </LinearLayout>

    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_modulator_frequency"
            android:id="@+id/textView_modulator_frequency"
            android:layout_weight="0.25"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ModulatorFrequency"
            android:text="0.0"
            android:layout_weight="0.25"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_modulator_depth"
            android:id="@+id/textView_modulator_depth"
            android:layout_weight="0.25"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ModulatorDepth"
            android:text="0.0"
            android:layout_weight="0.25"
            android:layout_marginBottom="40dp"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/button_play"
        android:id="@+id/buttonPlaySound"
        />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textOff="@string/button_toggle_off_permanant"
        android:textOn="@string/button_toggle_on_permanant"
        android:id="@+id/buttonToggleSound"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:layout_width="564dp"
        android:layout_height="wrap_content"
        android:hint="Enter your desired file name (no spaces), then press Record"
        android:id="@+id/editText"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionDone"
        />

    <ToggleButton
        android:layout_width="567dp"
        android:layout_height="100dp"
        android:textOff="@string/button_toggle_off_record"
        android:textOn="@string/button_toggle_on_record"
        android:id="@+id/buttonToggleRecord"
        android:layout_marginBottom="40dp"
        android:enabled="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="Help"
        android:id="@+id/main_to_help"
        android:onClick="openHelp"/>

</LinearLayout>

